Version 1.0.3 - Fixed bug, alignment looks weird, but only other solutions are hacks

--- a/style.css
+++ b/style.css
@@ -102,8 +102,9 @@ body {
 .list-container {
     margin: 10px 0 0;
     padding-right: 10px;
+    padding-left: 10px;
     height: 460px;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 .list-container ul {
